fix cards layout issues

--- a/components/cards/Cards.module.css
+++ b/components/cards/Cards.module.css
@@ -58,8 +58,6 @@
 
 .content {
   height: 50vh;
-  display: flex;
-  flex-direction: column;
   padding-top: 24px;
 }
 
@@ -75,7 +73,7 @@
 .slider {
   margin: auto;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 24px);
   display: flex;
 }
 
